# galderma-demo-trackwise

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/commands/: prime.md
.claude/hooks/: post_turn_update.py  postcompact_prime_inject.sh
.claude/hooks_state/: last_sync_project.utc
.claude/rules/: aws.md  python.md  react.md
.github/workflows/: README.md  ci.yml  deploy-agents.yml  deploy-frontend.yml  deploy-infra.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion.md  tech_stack.md
agents/: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
agents/case_understanding/: __init__.py  agent.py
agents/compliance_guardian/: __init__.py  agent.py
agents/csv_pack/: __init__.py  agent.py
agents/inquiry_bridge/: __init__.py  agent.py
agents/memory_curator/: __init__.py  agent.py
agents/observer/: __init__.py  agent.py
agents/recurring_detector/: __init__.py  agent.py
agents/resolution_composer/: __init__.py  agent.py
agents/sac_generator/: __init__.py  agent.py  prompts.py  scenarios.py  tools.py
agents/shared/: config.py  requirements.txt
agents/shared/models/: __init__.py  analysis.py  case.py  event.py  ledger.py  memory.py  resolution.py  run.py
agents/shared/tools/: __init__.py  a2a.py  human_review.py  ledger.py  memory.py  simulator.py
agents/tests/: test_models.py
agents/writeback/: __init__.py  agent.py
backend/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/bridge/: __init__.py  routes.py  websocket.py
backend/src/sac/: agent_client.py  agent_prompts.py  agent_tools.py  models.py  router.py  service.py  templates.py
backend/src/simulator/: __init__.py  api.py  demo_data.py  event_emitter.py  models.py
backend/tests/: conftest.py  test_sac_agent.py  test_sac_tools.py  test_simulator_api.py
docs/: CONTEXT_SNAPSHOT.md  IMMUTABLE_RULES.md  SANDWICH_PATTERN.md  WORKLOG.md
docs/prd/: AGENT_ARCHITECTURE.md  BUILD_SPEC.md  DATA_MODEL.md  DEMO_SCRIPT.md  PRD.md  UI_DESIGN_SYSTEM.md
frontend/: CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AuditorView.tsx  CreateCaseModal.tsx
frontend/src/components/domain/: AgentBadge.tsx  EmptyState.tsx  GlassPanel.tsx  LanguageSelector.tsx  MetricCard.tsx  ModeToggle.tsx  SeverityBadge.tsx  StatusBadge.tsx  TimelineItem.tsx  index.ts
frontend/src/components/layout/: AppLayout.test.tsx  AppLayout.tsx  CommandPalette.tsx  GlobalKpiDeck.tsx  GlobalLiveStrip.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  index.ts  shellMeta.ts
frontend/src/components/motion/: FadeIn.tsx  StaggerContainer.tsx  index.ts
frontend/src/components/overlays/: AuditorView.tsx  CreateCaseModal.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  GlassCard.tsx  LanguageToggle.tsx  ModeBadge.tsx  ModeToggle.tsx  SeverityBadge.tsx  Skeleton.tsx  UIShowcase.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  select.tsx  sheet.tsx  skeleton.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: index.ts  useCaseDetail.ts  useCases.ts  useRealtimeSync.ts  useSac.ts  useSacSimulator.ts  useStats.ts  useWebSocket.ts
frontend/src/i18n/: index.ts  pt-br.ts
frontend/src/lib/: utils.test.ts  utils.ts
frontend/src/pages/: AgentRoom.tsx  CSVPack.tsx  CaseDetail.tsx  Cases.tsx  Ledger.tsx  Memory.tsx  Network.tsx  Sac.tsx  index.ts
frontend/src/stores/: index.ts  languageStore.ts  modeStore.ts  sacStore.ts  sidebarStore.ts  timelineStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
infra/: CLAUDE.md
infra/environments/dev/: main.tf  terraform.tfvars.example
infra/modules/agentcore/gateway/: main.tf
infra/modules/agentcore/identity/: main.tf
infra/modules/agentcore/memory/: main.tf
infra/modules/agentcore/policy/: main.tf
infra/modules/agentcore/runtime/: main.tf
infra/modules/api-proxy/: .gitignore  main.tf
infra/modules/cloudfront/: main.tf
infra/modules/cloudwatch/: main.tf
infra/modules/dynamodb/: main.tf
infra/modules/ecr/: main.tf
infra/modules/s3/: main.tf
infra/shared/: providers.tf
scripts/: package-agents.sh  package-backend.sh  reset-demo.sh  seed-demo.sh  verify-aws.sh
