# ============================================
# Galderma TrackWise AI Autopilot Demo
# Backend - TrackWise Simulator (AgentCore Container)
# ============================================
#
# This service simulates TrackWise Digital for demo purposes.
# It deploys to AgentCore Runtime as a container.
# ============================================

[project]
name = "galderma-trackwise-backend"
version = "0.1.0"
description = "TrackWise Simulator for Galderma AI Autopilot Demo"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Galderma Demo Team", email = "demo@galderma.com" }
]

dependencies = [
    # AWS Strands Agents (MANDATORY)
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    # Bedrock AgentCore (MANDATORY for deployment)
    "bedrock-agentcore>=0.1.0",
    # FastAPI (for REST endpoints)
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    # Pydantic v2 (data validation)
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # WebSocket support
    "websockets>=12.0",
    # AWS SDK
    "boto3>=1.34.0",
    # Async support
    "anyio>=4.3.0",
    # Date/time handling
    "python-dateutil>=2.9.0",
    # Note: Using built-in uuid module for ID generation
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",  # for TestClient
    # Linting
    "ruff>=0.3.0",
    # Type checking
    "mypy>=1.8.0",
    "boto3-stubs[bedrock,dynamodb,s3,logs]>=1.34.0",
    # Mocking
    "moto[dynamodb,s3]>=5.0.0",
    "respx>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================
# Ruff Configuration (Linting & Formatting)
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults
    "B904",   # raise without from in except
    "ARG001", # unused function argument (intentional for FastAPI handlers)
    "ARG002", # unused method argument (intentional for API interfaces)
    "RUF059", # unpacked variable never used (intentional for tuple unpacking)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# ============================================
# MyPy Configuration
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
plugins = ["pydantic.mypy"]
# Relaxed for demo project

[[tool.mypy.overrides]]
module = [
    "strands_agents.*",
    "bedrock_agentcore.*",
    "moto.*",
]
ignore_missing_imports = true

# Ignore type errors for demo code with dynamic patterns
[[tool.mypy.overrides]]
module = [
    "src.simulator.event_emitter",
    "src.main",
]
ignore_errors = true

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
